serviceentry-external.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: pypi-external
  namespace: production-namespace
spec:
  hosts:
  - pypi.org
  - files.pythonhosted.org
  ports:
  - number: 443
    name: https
    protocol: TLS
  resolution: DNS
  location: MESH_EXTERNAL
